--- a/Zef-Blog-frontend/src/components/header/header.css
+++ b/Zef-Blog-frontend/src/components/header/header.css
@@ -6,9 +6,9 @@
   align-items: center;
   justify-content: space-between;
   background-color: var(--blue-color);
-  position: relative;
   z-index: 99;
   border-bottom: 2px solid var(--white-color);
+  position: fixed;
 }
 
 .logo-img {
