--- a/Zef-Blog-frontend/src/index.css
+++ b/Zef-Blog-frontend/src/index.css
@@ -15,6 +15,7 @@
   --category-item-color: rgb(170, 168, 168);
 }
 
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -78,3 +79,82 @@ align-items: center;
   font-size: 17px;
   font-weight: 500;
 }
+
+
+ /* modal  */
+
+ .update-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  }
+  
+  .update-modal-form {
+    width: 700px;
+    background-color: var(--white-color);
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border-radius: 10px;
+  }
+  
+  .update-modal-form-close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    color: var(--red-color);
+    font-size: 30px;
+    cursor: pointer;
+  }
+  
+  .update-modal-title {
+    text-align: center;
+    text-transform: capitalize;
+    color: var(--green-sea-color);
+    margin-bottom: 10px;
+    font-size: 24px;
+  }
+  
+  .update-modal-input
+  ,.update-modal-textarea {
+  width: 100%;
+  border-radius: 10px;
+  font-size: 21px;
+  border: 1px solid var(--gray-color);
+  padding: 10px;
+  margin: 10px 0;
+  }
+  
+  .update-modal-textarea  {
+    resize: none;
+  }
+  
+  .update-modal-btn {
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+    background-color: var(--green-sea-color);
+    padding: 9px;
+    color: var(--white-color);
+    font-weight: 500;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+    margin-top: 15px;
+  }
+  
+  
+  @media (max-width: 820px) {
+    .update-modal-form {
+      width: 90%;
+    }
+  }
+  
