--- a/Zef-Blog-frontend/src/index.css
+++ b/Zef-Blog-frontend/src/index.css
@@ -13,6 +13,7 @@
   --post-item-color: rgb(244, 244, 244);
   --post-item-border-color: rgb(183, 179, 179);
   --category-item-color: rgb(170, 168, 168);
+  --table-th-hover : #ddd ;
 }
 
 
