--- a/Zef-Blog-frontend/src/pages/admin/adminTable.css
+++ b/Zef-Blog-frontend/src/pages/admin/adminTable.css
@@ -19,3 +19,120 @@ overflow-y: scroll;
   padding-bottom: 3px;
   width: max-content;
 }
+
+.table {
+  width: 100%;
+  text-align: left;
+  border-collapse: collapse;
+}
+
+th , td {
+  border: 1px solid var(--gray-color);
+  padding: 10px;
+}
+
+td {
+  font-weight: 500;
+}
+
+th {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+}
+
+tr:nth-child(even) {
+  background-color: var(--white-color);
+}
+
+tr:hover {
+  background-color: var(--table-th-hover);
+}
+
+.table-image {
+  display: flex;
+  align-items: center;
+}
+
+
+.user-image {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.table-username {
+  font-weight: 500;
+  font-size: 14px;
+  margin-left: 5px;
+}
+
+.table-button-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.table-button-group button{
+  border: none;
+background-color: var(--green-color);
+color: var(--white-color);
+border-radius: 5px;
+font-size: 17px;
+font-weight: 500;
+padding: 5px;
+transition: all 0.5s;
+}
+.table-button-group button:last-child{
+background-color: var(--red-color);
+
+}
+
+.table-button-group button:hover {
+ scale: 1.05;
+}
+.table-button-group button a{
+color: var(--white-color);
+}
+
+
+/* media query  */
+@media (max-width : 800px) {
+  .table-wrabber {
+    padding: 15px;
+  }
+
+  .table-button-group {
+    flex-wrap: wrap;
+  }
+  .table-button-group button{
+    width: 100%;
+    margin: 6px 0;
+  }
+
+  th , td {
+  padding: 5px;
+  }
+  .table-image {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width : 520px) {
+  .table-button-group button{
+  font-size: 13px;
+  }
+
+  .table-wrabber {
+    padding: 5px;
+  }
+  th , td {
+    padding: 2px;
+    font-size: 13px;
+    text-align: center;
+    }
+    .table-username { 
+      font-size: 13px;
+    }
+}
