--- a/Zef-Blog-frontend/src/pages/profile/profile.css
+++ b/Zef-Blog-frontend/src/pages/profile/profile.css
@@ -3,12 +3,22 @@
   padding-top:  90px;
 }
 
+.profile-loader {
+min-height: calc(100vh - 50px);
+width: 100%;
+font-display: auto;
+align-items: center;
+justify-content: center;
+margin: 20px 0;
+}
+
+
 .profile-header {
   width: 100%;
   height: 400px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: center !important;
+  justify-content: center !important;
   flex-direction: column;
   background-color: var(--primary-color);
 }
