--- a/Zef-Blog-frontend/src/components/header/header.css
+++ b/Zef-Blog-frontend/src/components/header/header.css
@@ -137,7 +137,10 @@ border-radius: 50%;
  @media (max-width : 520px) {
   .header {
     padding: 0 10px;
+  }
 
+  .header-right-username {
+    font-size: 16px;
   }
   .logo-img {
     width: 40px;
@@ -152,6 +155,10 @@ border-radius: 50%;
    .header-menu {
     margin-right: 5px;
    }
+   .header-menu i{
+    font-size: 38px;
+  }
+
  }
 
 
