--- a/Zef-Blog-frontend/src/components/posts/posts.css
+++ b/Zef-Blog-frontend/src/components/posts/posts.css
@@ -1,4 +1,3 @@
-
 .post-list {
   display: flex;
   align-items: center;
@@ -33,7 +32,7 @@
 }
 
 .post-item-info-wrabber {
-width: 100%;  
+  width: 100%;
 }
 
 .post-item-info {
@@ -45,15 +44,15 @@ width: 100%;
   padding-bottom: 5px;
 }
 
-.post-item-auther strong{
-color: var(--green-sea-color);
-font-size: 18px;
+.post-item-auther strong {
+  color: var(--green-sea-color);
+  font-size: 18px;
 }
-.post-item-auther .post-item-username{
-color: var(--primary-color);
-font-size: 17px;
-font-weight: 500;
-text-transform: capitalize;
+.post-item-auther .post-item-username {
+  color: var(--primary-color);
+  font-size: 17px;
+  font-weight: 500;
+  text-transform: capitalize;
 }
 
 .post-item-date {
@@ -78,13 +77,13 @@ text-transform: capitalize;
 }
 
 .post-item-category {
-background-color: var(--pumpkin-color);
-color: var(--white-color);
-padding: 2px 7px;
-border-radius: 15px;
-font-size: 15px;
-font-weight: bold;
-cursor: pointer;
+  background-color: var(--pumpkin-color);
+  color: var(--white-color);
+  padding: 2px 7px;
+  border-radius: 15px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .post-item-description {
@@ -97,7 +96,7 @@ cursor: pointer;
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  -webkit-box-orient:vertical ;
+  -webkit-box-orient: vertical;
 }
 
 .post-item-link {
@@ -113,13 +112,30 @@ cursor: pointer;
   border-radius: 8px;
 }
 
-
-@media (max-width : 720px) {
+@media (max-width: 720px) {
   .post-item {
     padding: 10px;
   }
   .post-item-image {
-    object-fit: fill;
-    height: 300px;
+    height: fit-content;
+  }
+
+  .post-item-title {
+    color: var(--primary-color);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: capitalize;
+  }
+  .post-item-category {
+    font-size: 13px;
+  }
+}
+
+@media (max-width : 520px) {
+  .post-item-info {
+    flex-direction: column;
+    gap: 4px;
+    align-items: flex-start;
   }
 }
